tests/fixtures/invalid/float_lshift_bool.py
# Cannot left shift Float and Bool
x: float = 1.0 << True
